Fix <td> padding, make <table>s wider, left-align <th>s
- Adds a 100% `width` to tables.
- Uses a 0.5em padding in table cells and headers without adding padding on the
  left and right side of the table.
- Left-aligns table headers.

--- a/enough.table.css
+++ b/enough.table.css
@@ -1,3 +1,15 @@
-td{
+table{
+  width: 100%;
+}
+td, th{
   padding: 0.5em;
+}
+td:first-child, th:first-child{
+  padding-left: 0;
+}
+td:last-child, th:last-child{
+  padding-right: 0;
+}
+th{
+  text-align: left;
 }
